--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,15 +4,99 @@
     box-sizing: border-box;
 }
 
-header {
-    .container-fluid {
-        .row {
-            .covid {
-                padding: 8px 0;
-                background-color: #233A95FF;
-                color: white;
-                font-family: Arial, Helvetica, sans-serif;
-                font-weight: lighter
+body {
+    height: 2000px;
+
+    header {
+        .container-fluid {
+            .covid-nav {
+                .covid {
+                    padding: 10px 0;
+                    font-size: 14px;
+                    background-color: #233A95FF;
+                    color: white;
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-weight: lighter
+                }
+            }
+
+            .second-nav {
+                border-bottom: 0.2px solid rgb(205, 205, 205);
+
+                ul {
+                    border: none;
+
+                    li {
+                        a {
+                            font-size: 14px;
+                            font-weight: 200;
+                            font-family: Arial, Helvetica, sans-serif;
+                            color: rgb(107, 107, 107);
+                        }
+                    }
+                }
+
+                .left-second-nav {
+                    margin-left: 8%;
+                }
+
+                .middle-second-nav {
+                    padding: 11px 0;
+                    font-size: 13px;
+
+                    .slash {
+                        color: rgb(205, 205, 205);
+                    }
+
+                    .numb {
+                        color: #2BC7FBFF;
+                        font-weight: bold;
+                    }
+                }
+
+                .last-second-nav {
+                    border-left: 1px solid rgb(205, 205, 205);
+
+                    .drpdwnT {
+                        border: none;
+                        position: relative;
+                        padding: 11px;
+
+                        &:hover {
+                            border: none;
+                            color: #2BC7FBFF;
+                        }
+
+                        &:hover+.drpdwnM {
+                            display: block;
+                            padding: 5px 30px;
+                            text-align: left;
+                            background: rgb(227, 218, 218);
+                        }
+                    }
+
+                    .drpdwnM {
+                        display: flex;
+                        position: absolute;
+                        left: -15px;
+                        flex-direction: column;
+                        justify-content: center;
+                        text-align: center;
+                        display: none;
+
+                        &:hover {}
+
+                        a {
+                            padding: 3px 0px;
+
+                            &:hover {
+                                color: #2BC7FBFF;
+                            }
+                        }
+
+                    }
+
+                }
             }
         }
     }
