--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -37,7 +37,7 @@ body {
                 }
 
                 .left-second-nav {
-                    margin-left: 8%;
+                    padding: 2px;
                 }
 
                 .middle-second-nav {
@@ -50,6 +50,7 @@ body {
 
                     .numb {
                         color: #2BC7FBFF;
+                        font-size: 14px;
                         font-weight: bold;
                     }
                 }
@@ -61,6 +62,8 @@ body {
                         border: none;
                         position: relative;
                         padding: 11px;
+                        transition: height 0.3s ease-in-out;
+                        transition-delay: 0.1s;
 
                         &:hover {
                             border: none;
@@ -68,23 +71,31 @@ body {
                         }
 
                         &:hover+.drpdwnM {
-                            display: block;
-                            padding: 5px 30px;
+                            visibility: visible;
+                            padding: 5px 34px;
                             text-align: left;
-                            background: rgb(227, 218, 218);
+                            background: rgb(244, 244, 244);
                         }
                     }
 
                     .drpdwnM {
                         display: flex;
                         position: absolute;
-                        left: -15px;
+                        overflow: hidden;
+                        left: -20px;
+                        top: 44px;
                         flex-direction: column;
                         justify-content: center;
                         text-align: center;
-                        display: none;
+                        visibility: hidden;
 
-                        &:hover {}
+
+                        &:hover {
+                            visibility: visible;
+                            padding: 5px 34px;
+                            text-align: left;
+                            background: rgb(244, 244, 244);
+                        }
 
                         a {
                             padding: 3px 0px;
