--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,8 @@ body {
   height: 2000px;
 }
 
-body header .container-fluid .covid-nav .covid {
+body header .head-nav .covid-nav .covid {
+  padding: 0 auto;
   padding: 8px 0;
   font-size: 12.5px;
   background-color: #233A95FF;
@@ -18,15 +19,15 @@ body header .container-fluid .covid-nav .covid {
   font-weight: lighter;
 }
 
-body header .container-fluid .second-nav {
+body header .head-nav .second-nav {
   border-bottom: 0.2px solid #cdcdcd;
 }
 
-body header .container-fluid .second-nav ul {
+body header .head-nav .second-nav ul {
   border: none;
 }
 
-body header .container-fluid .second-nav ul li a {
+body header .head-nav .second-nav ul li a {
   font-size: 13px;
   font-weight: 200;
   font-family: Arial, Helvetica, sans-serif;
@@ -35,45 +36,45 @@ body header .container-fluid .second-nav ul li a {
   padding: auto 1px !important;
 }
 
-body header .container-fluid .second-nav ul li a:hover {
+body header .head-nav .second-nav ul li a:hover {
   color: #2BC7FBFF;
 }
 
-body header .container-fluid .second-nav .left-second-nav {
+body header .head-nav .second-nav .left-second-nav {
   margin-left: 8.33%;
 }
 
-body header .container-fluid .second-nav .left-second-nav a {
+body header .head-nav .second-nav .left-second-nav a {
   padding: 12px 6px !important;
   font-size: 12px;
 }
 
-body header .container-fluid .second-nav .middle-second-nav {
+body header .head-nav .second-nav .middle-second-nav {
   padding: 11px 0;
   font-size: 11px;
 }
 
-body header .container-fluid .second-nav .middle-second-nav .slash {
+body header .head-nav .second-nav .middle-second-nav .slash {
   color: #cdcdcd;
 }
 
-body header .container-fluid .second-nav .middle-second-nav .numb {
+body header .head-nav .second-nav .middle-second-nav .numb {
   color: #2BC7FBFF;
   font-size: 12px;
   font-weight: bold;
 }
 
-body header .container-fluid .second-nav .last-second-nav {
+body header .head-nav .second-nav .last-second-nav {
   border-left: 1px solid #cdcdcd;
 }
 
-body header .container-fluid .second-nav .last-second-nav .drpdwnT {
+body header .head-nav .second-nav .last-second-nav .drpdwnT {
   border: none;
   position: relative;
   padding: 12px;
 }
 
-body header .container-fluid .second-nav .last-second-nav .drpdwnT:hover + .drpdwnM {
+body header .head-nav .second-nav .last-second-nav .drpdwnT:hover + .drpdwnM {
   visibility: visible;
   padding: 20px 34px;
   background: white;
@@ -81,7 +82,7 @@ body header .container-fluid .second-nav .last-second-nav .drpdwnT:hover + .drpd
           box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
-body header .container-fluid .second-nav .last-second-nav .drpdwnM {
+body header .head-nav .second-nav .last-second-nav .drpdwnM {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -98,9 +99,10 @@ body header .container-fluid .second-nav .last-second-nav .drpdwnM {
           justify-content: center;
   text-align: center;
   visibility: hidden;
+  z-index: 1;
 }
 
-body header .container-fluid .second-nav .last-second-nav .drpdwnM:hover {
+body header .head-nav .second-nav .last-second-nav .drpdwnM:hover {
   visibility: visible;
   padding: 20px 34px;
   background: white;
@@ -108,31 +110,117 @@ body header .container-fluid .second-nav .last-second-nav .drpdwnM:hover {
           box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
-body header .container-fluid .second-nav .last-second-nav .drpdwnM a {
+body header .head-nav .second-nav .last-second-nav .drpdwnM a {
   padding: 3px 0px;
 }
 
-body header .container-fluid .second-nav .last-second-nav .drpdwnM a:hover {
+body header .head-nav .second-nav .last-second-nav .drpdwnM a:hover {
   color: #2BC7FBFF;
 }
 
-body header .container-fluid .third-nav {
+body header .head-nav .third-nav {
   padding: 24px 0;
-  padding-left: 7%;
+  padding-left: 9%;
   display: inline;
 }
 
-body header .container-fluid .third-nav img {
+body header .head-nav .third-nav img {
   width: 160px;
 }
 
-body header .container-fluid .third-nav .logoTitle {
+body header .head-nav .third-nav .logoTitle {
   font-size: 11px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 3px 0;
-  opacity: 0.3;
-  padding-left: 3.3%;
+  opacity: 0.5;
+}
+
+body header .head-nav .third-nav .location {
+  border: 1px solid #cdcdcd;
+  border-radius: 10px;
+  padding: 8px 15px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  cursor: pointer;
+  margin-top: 8px;
+}
+
+body header .head-nav .third-nav .location .title {
+  font-size: 11px;
+  opacity: 0.8;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body header .head-nav .third-nav .location .content {
+  color: #233A95FF;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body header .head-nav .third-nav .searchProduct {
+  margin-top: 10px;
+  position: relative;
+}
+
+body header .head-nav .third-nav .searchProduct i {
+  position: absolute;
+  top: 15px;
+  right: 25px;
+  font-size: 30px;
+}
+
+body header .head-nav .third-nav .searchProduct input {
+  width: 100%;
+  padding: 15px 20px;
+  background: #f4f4f4;
+  border: none;
+  border-radius: 10px;
+}
+
+body header .head-nav .third-nav .searchProduct input:focus {
+  outline: none;
+}
+
+body header .head-nav .third-nav .right-third-nav {
+  padding: 15px 15px;
+}
+
+body header .head-nav .third-nav .right-third-nav .userIcon i {
+  border: 1px solid grey;
+  border-radius: 50%;
+  padding: 10px 12px;
+  font-size: 20px;
+}
+
+body header .head-nav .third-nav .right-third-nav .basket {
+  margin-top: -15px;
+  cursor: pointer;
+}
+
+body header .head-nav .third-nav .right-third-nav .basket .price {
+  margin-top: -15px;
+}
+
+body header .head-nav .third-nav .right-third-nav .basket .basketIcon {
+  font-size: 30px;
+  color: red;
+  background: #FFF1EEFF;
+  border-radius: 50%;
+  padding: 10px;
+  position: relative;
+}
+
+body header .head-nav .third-nav .right-third-nav .basket .basketIcon .count {
+  position: absolute;
+  font-size: 15px;
+  border-radius: 50%;
+  padding: 2px 5px;
+  background: red;
+  color: white;
+  right: -5px;
+  top: -2px;
 }
 /*# sourceMappingURL=main.css.map */
