--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,9 +8,10 @@ body {
     height: 2000px;
 
     header {
-        .container-fluid {
+        .head-nav {
             .covid-nav {
                 .covid {
+                    padding: 0 auto;
                     padding: 8px 0;
                     font-size: 12.5px;
                     background-color: #233A95FF;
@@ -94,6 +95,7 @@ body {
                         justify-content: center;
                         text-align: center;
                         visibility: hidden;
+                        z-index: 1;
 
 
                         &:hover {
@@ -118,21 +120,113 @@ body {
 
             .third-nav {
                 padding: 24px 0;
-                padding-left: 7%;
+                padding-left: 9%;
                 display: inline;
 
                 img {
                     width: 160px;
                 }
-                
+
                 .logoTitle {
                     font-size: 11px;
                     display: flex;
-                    padding: 3px 0;
-                    opacity: 0.3;
-                    padding-left: 3.3%;
+                    opacity: 0.5;
+                }
+
+                .location {
+                    border: 1px solid rgb(205, 205, 205);
+                    border-radius: 10px;
+                    padding: 8px 15px;
+                    flex-direction: column;
+                    cursor: pointer;
+                    margin-top: 8px;
+
+                    .title {
+                        font-size: 11px;
+                        opacity: 0.8;
+                        font-family: Arial, Helvetica, sans-serif;
+                    }
+
+                    .content {
+                        color: #233A95FF;
+                        font-weight: 700;
+                        font-family: Arial, Helvetica, sans-serif;
+                    }
+                }
+
+                .searchProduct {
+                    margin-top: 10px;
+                    position: relative;
+
+
+
+                    i {
+                        position: absolute;
+                        top: 15px;
+                        right: 25px;
+                        font-size: 30px;
+
+                    }
+
+                    input {
+                        width: 100%;
+                        padding: 15px 20px;
+                        background: rgb(244, 244, 244);
+                        border: none;
+                        border-radius: 10px;
+
+                        &:focus {
+                            outline: none;
+                        }
+                    }
+                }
+
+                .right-third-nav {
+                    padding: 15px 15px;
+
+                    .userIcon {
+                        i {
+                            border: 1px solid grey;
+                            border-radius: 50%;
+                            padding: 10px 12px;
+                            font-size: 20px;
+                        }
+
+                    }
+
+                    .basket {
+                        margin-top: -15px;
+                        cursor: pointer;
+
+                        .price {
+                            margin-top: -15px;
+                        }
+
+                        .basketIcon {
+                            font-size: 30px;
+                            color: red;
+                            background: #FFF1EEFF;
+                            border-radius: 50%;
+                            padding: 10px;
+                            position: relative;
+
+                            .count {
+                                position: absolute;
+                                font-size: 15px;
+                                border-radius: 50%;
+                                padding: 2px 5px;
+                                background: red;
+                                color: white;
+                                right: -5px;
+                                top: -2px;
+                            }
+                        }
+                    }
                 }
             }
+
+
+
         }
     }
 }
