--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -416,10 +416,12 @@ body {
                 margin-top: -27.5px;
                 width: 100%;
                 position: relative;
+                overflow: hidden;
             }
 
-            #carousel-container>div:first-child {
+            #carousel-container>div:first-child ul {
                 overflow: hidden;
+                display: flex;
                 max-width: 100%;
                 margin: 0;
             }
@@ -429,6 +431,11 @@ body {
                 width: 4000px;
                 padding: 0;
                 margin: 0;
+
+                img {
+                    width: 100%;
+                    height: 465px;
+                }
             }
 
             .animate {
@@ -450,13 +457,14 @@ body {
 
             #controls {
                 position: absolute;
-                top: 0;
+                top: 49%;
             }
 
             #controls span {
                 width: 50px;
                 cursor: pointer;
                 opacity: 0.4;
+                left: 5px;
             }
 
             #controls span:hover {
