--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -417,67 +417,83 @@ body {
                 width: 100%;
                 position: relative;
                 overflow: hidden;
-            }
 
-            #carousel-container>div:first-child ul {
-                overflow: hidden;
-                display: flex;
-                max-width: 100%;
-                margin: 0;
-            }
+                #controls {
 
-            #carousel {
-                position: relative;
-                width: 4000px;
-                padding: 0;
-                margin: 0;
+                    #prev {
+                        left: 3%;
+                    }
 
-                img {
-                    width: 100%;
-                    height: 465px;
+                    #next {
+                        right: 5%;
+                    }
+
+                    span {
+                        position: absolute;
+                        top: 50%;
+
+                        &:hover {
+                            opacity: 1;
+                        }
+
+                        i {
+                            background-color: rgb(229, 229, 229);
+                            padding: 12px 15px;
+                            border-radius: 50%;
+                            font-size: 15px;
+                            position: absolute;
+                            cursor: pointer;
+                        }
+                    }
+                }
+
+                >div:first-child ul {
+                    display: flex;
+                    max-width: 100%;
+                    margin: 0;
+                }
+
+                #carousel {
+                    position: relative;
+                    width: 4000px;
+                    padding: 0;
+                    margin: 0;
+
+                    img {
+                        width: 100%;
+                        height: 462px;
+
+                    }
+
+                    .content {
+                        position: absolute;
+                        left: 15%;
+                        z-index: 15;
+                        top: 5%;
+                    }
+
+                    .animate {
+                        -webkit-transition-duration: 1s;
+                        -moz-transition-duration: 1s;
+                        -o-transition-duration: 1s;
+                        transition-duration: 1s;
+                        -webkit-transition-property: -webkit-transform;
+                        -moz-transition-property: -moz-transform;
+                        -o-transition-property: -o-transform;
+                        transition-property: transform;
+                    }
+
+                    .slide {
+                        list-style: none;
+                        position: relative;
+                        float: left;
+                    }
                 }
             }
 
-            .animate {
-                -webkit-transition-duration: .5s;
-                -moz-transition-duration: .5s;
-                -o-transition-duration: .5s;
-                transition-duration: .5s;
-                -webkit-transition-property: -webkit-transform;
-                -moz-transition-property: -moz-transform;
-                -o-transition-property: -o-transform;
-                transition-property: transform;
-            }
 
-            .slide {
-                list-style: none;
-                position: relative;
-                float: left;
-            }
 
-            #controls {
-                position: absolute;
-                top: 49%;
-            }
 
-            #controls span {
-                width: 50px;
-                cursor: pointer;
-                opacity: 0.4;
-                left: 5px;
-            }
-
-            #controls span:hover {
-                opacity: 1;
-            }
-
-            #prev {
-                float: left;
-            }
-
-            #next {
-                float: right;
-            }
 
 
         }
