--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -223,8 +223,6 @@ body {
                 }
             }
 
-
-
         }
 
         .main-navBar {
@@ -462,14 +460,7 @@ body {
                     img {
                         width: 100%;
                         height: 462px;
-
-                    }
-
-                    .content {
-                        position: absolute;
-                        left: 15%;
-                        z-index: 15;
-                        top: 5%;
+cursor: pointer;
                     }
 
                     .animate {
@@ -487,6 +478,15 @@ body {
                         list-style: none;
                         position: relative;
                         float: left;
+                    }
+
+                    .content {
+                        cursor: pointer;
+                        position: absolute;
+                        left: 10%;
+                        z-index: 1;
+                        top: 10%;
+                        width: 30%;
                     }
                 }
             }
